Bug fix: ensure main nav has higher z-index than all other elements

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -558,7 +558,7 @@ header .navbar .nav-link{
     width: 100%;
     margin: 0;
     padding: 5%;
-    background: var(--red-gradient);
+    background: var(--txt-cute);
     align-self: stretch;
 }
 
@@ -636,12 +636,16 @@ header .navbar .nav-link{
     position: relative;
     top: 0;
     left: 0;
-    z-index: 1000;
+    z-index: 4;
     width: 100%;
     height: 100%;
     display: block;
     margin: 0 auto;
     padding: 5%;
+}
+
+#search-area h3{
+    font-family: var(font-3);
 }
 
 #search-recipes-form{
